--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,6 +10,14 @@ html
       link(href="/css/bootstrap.min.css", rel="stylesheet")
       link(href="/css/now-ui-kit.css", rel="stylesheet")
     block js
+      script(src="/js/core/jquery.3.2.1.min.js")
+      script(src="/js/core/tether.min.js")
+      script(src="/js/core/bootstrap.min.js")
+      script(src="/js/plugins/bootstrap-switch.js")
+      script(src="/js/plugins/nouislider.min.js")
+      script(src="/js/plugins/bootstrap-datepicker.js")
+      script(src="/js/plugins/jquery.sharrre.js")
+      script(src="/js/now-ui-kit.js")
   body.template-page
     block header
       nav.navbar.navbar-toggleable-md.bg-white.fixed-top
